# Model_Engineering-Spam_Detection

./: .gitignore  README.md  config.py  main.py  model_config.yml  pyproject.toml  requirements.txt
app/: app.py
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_model_training.ipynb
src/: data_prep.py  model_trainer.py  predict_pipeline.py  text_cleaning.py  utils.py
