[project]
name = "spam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
